--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "homepage": "https://github.com/bob4koolest/risk-game-online#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-ws": "^5.0.2",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "path": "^0.12.7",
     "websocket": "^1.0.34",
     "ws": "^8.6.0"
