--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bob4koolest/risk-game-online.git"
+    "url": "git+https://github.com/bob4koolest/emblitz.git"
   },
   "keywords": [
     "bruh"
@@ -16,9 +16,9 @@
   "author": "bobux man",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/bob4koolest/risk-game-online/issues"
+    "url": "https://github.com/bob4koolest/emblitz/issues"
   },
-  "homepage": "https://github.com/bob4koolest/risk-game-online#readme",
+  "homepage": "https://github.com/bob4koolest/emblitz#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
