--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
+    "events": "^3.3.0",
     "express": "^4.18.1",
     "express-ws": "^5.0.2",
     "http": "^0.0.1-security",
