--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ejs": "^3.1.8",
     "events": "^3.3.0",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.4.0",
     "express-ws": "^5.0.2",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
