--- a/package.json
+++ b/package.json
@@ -27,14 +27,16 @@
     "ejs": "^3.1.8",
     "events": "^3.3.0",
     "express": "^4.18.1",
-    "express-rate-limit": "^6.4.0",
+    "express-rate-limit": "^6.5.1",
     "express-ws": "^5.0.2",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.7.7",
+    "password-hash": "^1.2.2",
     "path": "^0.12.7",
     "pg": "^8.7.3",
     "websocket": "^1.0.34",
-    "ws": "^8.7.0"
+    "ws": "^8.8.1"
   }
 }
