add demo options, finish supply drop

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ DATABASE_PORT=[db port]
 ADMINMASTERPASSWORD=[master admin password]
 MAILUSER=[email username]
 MAILPASSWORD=[email password]
+ADS_ENABLED=[true/false]
+ERROR_LOGGING=[true/false]
