removed beta tester badge unlocking

--- a/configs.json
+++ b/configs.json
@@ -1,5 +1,5 @@
 {
-    "gameVersion": "1.5.4",
+    "gameVersion": "1.5.4_CAC_DEMO",
     "gameLastUpdated": "4/17/2023",
     "timeoutDuration": 15000,
     "commercialSettings": {
