--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
   "name": "emblitz",
-  "version": "1.0.0",
-  "description": "amongus",
+  "version": "1.5.7a",
+  "description": "Emblitz is an online real-time strategy game. Fight other players from around the world for control over a variety of maps!",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bob4koolest/emblitz.git"
+    "url": "git+https://github.com/somewhatalex/emblitz.git"
   },
   "keywords": [
-    "bruh"
+    "games",
+    "online-games",
+    "browser-games",
+    "strategy-game"
   ],
-  "author": "bobux man",
+  "author": "Emblitz Developers",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/bob4koolest/emblitz/issues"
+    "url": "https://github.com/somewhatalex/emblitz/issues"
   },
-  "homepage": "https://github.com/bob4koolest/emblitz#readme",
+  "homepage": "https://github.com/somewhatalex/emblitz#readme",
   "dependencies": {
     "bad-words": "^3.0.4",
     "body-parser": "^1.20.0",
