add volume slider in user settings page

--- a/configs.json
+++ b/configs.json
@@ -1,6 +1,6 @@
 {
-    "gameVersion": "1.5.7a",
-    "gameLastUpdated": "6/16/2023",
+    "gameVersion": "1.5.8",
+    "gameLastUpdated": "12/22/2023",
     "timeoutDuration": 15000,
     "commercialSettings": {
         "googleAdsense": {
